--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Rock paper scissors</title>
 </head>
 <body>
-    <script>
-        console.log("Hello!");
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
